hungarian implemented, makefile to manage build

--- a/localization/Makefile
+++ b/localization/Makefile
@@ -1,16 +1,25 @@
-CC="g++"
-PROJECT=localization
-PROJECT1=linedetection
-PROJECT2=depth_estimation
-PROJECT3=heatmap
-PROJECT4=rndgeneration
-SRC1=linedetection.cpp
-SRC2=depth_estimation.cpp
-SRC3=heatmap.cpp
-SRC4=rndgeneration.cpp
-LIBS=`pkg-config --libs opencv4 --cflags --libs`
-# $(PROJECT): $(SRC)
-# 	$(CC) $(SRC) -o $(PROJECT) $(LIBS)
-$(PROJECT4): $(SRC4)
-	$(CC) $(SRC4) -o $(PROJECT4) $(LIBS)
+CXX = g++
+CXXFLAGS = -std=c++11 -Wall
+
+# List of source files and their corresponding targets
+BUILD_DIR = build
+SOURCES = linedetection.cpp depth_estimation.cpp heatmap.cpp rndgeneration.cpp
+TARGETS = $(addprefix $(BUILD_DIR)/,$(SOURCES:.cpp=))
+LIBS = `pkg-config --libs opencv4`
+CFLAGS = `pkg-config --cflags opencv4`
+
+# Rule to build all targets
+all: $(TARGETS)
+
+# Generic rule to build individual targets
+$(BUILD_DIR)/%: %.cpp
+	$(CXX) $(CXXFLAGS) $< -o $@ $(CFLAGS) $(LIBS)
+
+# Rule to build testMain from testMain.cpp and its dependencies
+$(BUILD_DIR)/hungarian: hungarian-algorithm-cpp/Hungarian.cpp hungarian-algorithm-cpp/Hungarian.h hungarian.cpp
+	$(CXX) $(CXXFLAGS) $^ -o $@ $(CFLAGS) $(LIBS)
+
+clean:
+	rm -f $(TARGETS) $(BUILD_DIR)/testMain
+
 #export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/lib/
