--- a/localization/Makefile
+++ b/localization/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -g -std=c++11 -Wall
 
 BUILD_DIR = build
 
-SOURCES = rndgeneration.cpp linepoints.cpp realmap_location.cpp utilities.cpp pipeline.cpp gradient_descent.cpp
+SOURCES = rndgeneration.cpp linepoints.cpp realmap_location.cpp utilities.cpp pipeline.cpp gradient_descent.cpp linedetection.hpp
 TARGETS = $(addprefix $(BUILD_DIR)/,$(SOURCES:.cpp=.o))
 EXECUTABLE = $(BUILD_DIR)/pipeline
 
@@ -14,13 +14,13 @@ $(EXECUTABLE): $(TARGETS)
 	$(CXX) $(CXXFLAGS) $^ -o $@ $(CFLAGS) $(LIBS)
 
 $(BUILD_DIR)/%.o: %.cpp %.hpp point.hpp linepoint.hpp raw_points.hpp
-	$(CXX) $(CXXFLAGS) -c $< -o $@ $(CFLAGS)
+	$(CXX) $(CXXFLAGS) -c $< -o $@ $(CFLAGS) $(LIBS)
 
 all: $(EXECUTABLE)
 # $(BUILD_DIR)/gradient_descent.o: gradient_descent.cpp gradient_descent.hpp point.hpp linepoint.hpp raw_points.hpp linepoints.o
 # 	$(CXX) $(CXXFLAGS) -c $< -o $@ $(CFLAGS)
 $(BUILD_DIR)/pipeline.o: pipeline.cpp point.hpp linepoint.hpp raw_points.hpp
-	$(CXX) $(CXXFLAGS) -c $< -o $@ $(CFLAGS)
+	$(CXX) $(CXXFLAGS) -c $< -o $@ $(CFLAGS) $(LIBS)
 clean:
 	rm -f $(TARGETS) $(EXECUTABLE)
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib/
